--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -15,20 +15,6 @@ body {
     flex-grow: 1;
 }
 
-
-
-.Random {
-    background-color: white;
-}
-
-.Quote {
-    background-color: #e5e7eb;
-}
-
-.Action {
-
-}
-
 .Footer {
     background-color: #1F2937;
 }
@@ -65,6 +51,8 @@ li {
     padding-left: 20%;
     padding-right: 20%;
     flex-grow: 2;
+    padding-bottom: 5%;
+    
 }
 
 .Header_Info {
@@ -72,6 +60,7 @@ li {
     gap: 64px;
     padding-top: 5%;
     flex-grow: 3;
+   
 }
 
 .MoreInfo {
@@ -114,6 +103,12 @@ li {
 
 /* Random */
 
+.Random {
+    background-color: #F9faf8;
+    padding-bottom: 5%;
+}
+
+
 .title {
     text-align: center;
     font-size: 36px;
@@ -124,6 +119,7 @@ li {
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 4px;
 }
 
 .apic {
@@ -145,4 +141,74 @@ height: 256px;
 
 .pictext {
     text-align: center;
+}
+
+/* Quote */
+
+.Quote {
+    background-color: #e5e7eb;
+    gap: 2px;
+    padding: 10%;
+}
+
+.thequote {
+    font-size: 36px;
+    color: #1F2937;
+    font-style: italic;
+    font-weight: 0;
+}
+
+.author {
+    text-align: right;
+    font-weight: bold;
+}
+
+/* Action */
+
+.Action {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 86px;
+    background-color: #3882f6;
+    width: 600px;
+    flex-grow: 1;
+    border-radius: 5px;
+}
+
+ .Child.act {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 7%;
+}
+
+.atext {
+color: #F9faf8;
+font-size: 18px;
+font-weight: bold;
+}
+
+.asign {
+color: #e5e7eb;
+font-size: 18px;
+}
+
+.singZup {
+    background-color: #3882f6;
+    color: #F9faf8; 
+    border-radius: 5px;
+    border: 2px solid white;
+    width: 100px;
+    height: 25px;
+}
+
+.Footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.Footer p {
+    color: #e5e7eb;
 }
